# ft_linear_regression

./: CMakeLists.txt  LinearRegression.cpp  LinearRegression.hpp  PlotAutoscale.cpp  PlotAutoscale.hpp  coefs.txt  main.cpp  main_predict.cpp  main_train.cpp  make.sh  plot.h
